config/manifests/gateway/nginxgatewayfabric/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: inference-gateway
spec:
  gatewayClassName: nginx
listeners:
- name: http
  port: 80
  protocol: HTTP
